kubernetes/admin/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hermes-admin
  name: hermes-admin
  namespace: hermes-agent
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 48082
      protocol: TCP
      targetPort: 48082
  selector:
    app: hermes-admin
